--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,8 @@
     background: linear-gradient(90deg, rgba(26,78,110,1) 10%, rgba(44,110,150,1) 50%, rgba(26,78,110,1) 90%);;
     font-size: 62.5%;
 }
+
+* {
+    font-family: 'Roboto Mono', monospace;
+    color: #FFFFFF;
+}
