Added border box and reset margin and padding to 0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,5 +9,8 @@
 * {
     font-family: 'Roboto Mono', monospace;
     color: #FFFFFF;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 
 }
