--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,5 +12,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
 
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100rem;
+    margin: 0 auto;
 }
