--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
     font-size: 4rem;
     margin: 1rem;
     padding: 1rem;
+    text-align: center;
 }
 
 .background {
@@ -35,7 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 100rem;
+    max-width: 80rem;
     margin: 0 auto;
 }
 
@@ -43,6 +44,7 @@
     border: solid 0.1rem #FFFFFF;
     background-color: rgba(26,78,110,1);
     padding: 1rem;
+    filter: opacity(90%);
 }
 
 .flex-column {
