--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,15 @@
     margin: 2rem;
     text-align: center;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input {
+    border: solid 0.5rem #FFFFFF;
+    color: #000000;
+    /* box-shadow: 0 0.1rem 1rem 0 #FFFFFF; */
+}
