added styling for cursor disabled status

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,11 @@
     transition: transform 150ms;
 }
 
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    transform: none;
+}
+
 .question-style {
     font-size: 3rem;
     margin: 2rem;
