added comments to high scores js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ input {
     text-align: center;
 }
 
-.high-scores-list {
+.high-scores-results {
     font-size: 1.5rem;
     padding: 1rem 0 2rem 0;
 }
