save score button and input fields now become disabled after user input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ input {
     color: #000000;
 }
 
+input[disabled] {
+    color: #FFFFFF;
+}
+
 .heading-style {
     font-size: 4rem;
     margin: 1rem;
